# YOLO-face-recognition

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/face_msgs/share/face_msgs/: local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/face_msgs/share/face_msgs/cmake/: export_face_msgs__rosidl_generator_pyExport.cmake  face_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  face_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/face_msgs/share/face_msgs/msg/: FaceEmbeddingArray.json  FaceEmbeddingArray.msg
install/yolo_face_recognition/lib/yolo_face_recognition/: camera_node  detection_node  embedding_node  tracking_node
install/yolo_face_recognition/share/yolo_face_recognition/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yolo_face_recognition/share/yolo_face_recognition/config/: faces.yaml  params.yaml
log/: latest_build
ros2_yolo_ws/install/: local_setup.sh  setup.sh
ros2_yolo_ws/install/face_msgs/share/face_msgs/: local_setup.dsv  package.bash  package.ps1  package.sh
ros2_yolo_ws/log/: latest_build
ros2_yolo_ws/src/face_msgs/: CMakeLists.txt  package.xml
ros2_yolo_ws/src/yolo_face_recognition/: package.xml  setup.cfg  setup.py
ros2_yolo_ws/src/yolo_face_recognition/nodes/: camera_publisher_node.py
scripts/: start_camera.sh  start_detection.sh  start_embedding.sh  start_tracking.sh
(+64 files in other folders)
